[package]
name = "qoranet"
version = "0.1.0"
edition = "2021"
authors = ["QoraNet Team"]
description = "A next-generation blockchain powered by Proof of Liquidity and distributed application hosting"
license = "Apache-2.0"
repository = "https://github.com/yourusername/qoranet"
keywords = ["blockchain", "cryptocurrency", "proof-of-liquidity", "distributed-computing"]

[[bin]]
name = "qoranet-validator"
path = "src/bin/validator.rs"

[[bin]]
name = "qoranet-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Networking
libp2p = "0.53"

# Database
rocksdb = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# System monitoring
sysinfo = "0.29"

# HTTP client for price fetching
reqwest = { version = "0.11", features = ["json"] }

# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"

[workspace]
members = [
    "programs/*"
]
